# TradingAgents

./: .dockerignore  .env.enterprise.example  .env.example  .gitignore  .importlinter  ARCHITECTURE_DIAGRAMS.md  BACKEND_API_DISCOVERY.md  CHEAT_SHEET.md  CLAUDE.md  CODEBASE_DISCOVERY.md  CODE_EXAMPLES.md  DESIGN_ANALYSIS.md  DESIGN_PATTERNS.md  DOCUMENTATION_INDEX.md  Dockerfile  EXACT_CODE_REFERENCES.txt  HISTORY_AND_API_ANALYSIS.md  INVESTIGATION_FINDINGS.md  INVESTIGATION_SUMMARY.txt  NEUMORPHISM_REDESIGN_PROMPT.md  QUICK_REFERENCE.md  README.md  TEST_COVERAGE_AUDIT.txt  TRADER_SUMMARY.txt  TRADING_AGENTS_DEEP_ANALYSIS.md  _bt_detail.json  _bt_trades.json  coverage.json  deploy.sh  docker-compose.yml  pyproject.toml  report.txt  start.bat  start.sh
.tmp_db_backup/: copy_prod_scheduled_to_local.py  local_pre_import_backup.json  scan_analysis_backup.json
backend/: ai_manager_schemas.py  async_persistence.py  callbacks.py  crypto.py  dead_letter.py  event_bus.py  main.py  migrate.py  observability.py  persistence.py  rate_limit.py  scheduler.py  schemas.py  stream_parser.py  utils.py  validators.py  ws_manager.py
cli/: main.py
debug_forensics/: ROOT_CAUSE_REPORT.md  s3_priority.py  s4_llm_sim.py  s4b_results.json
deploy/: nginx.conf
docs/: ENVIRONMENT.md  disaster-recovery.md  neumorphism-design-system.md
frontend/: index.html  neumorphism-preview.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
plans/: crypto-futures-implementation-plan.md  web-frontend-implementation-plan.md
scripts/: apply_profitability_config.py  backup.sh  backup_accounts.py  cache_parity_eval.py  deploy.sh  measure_cache_prefixes.py  restore_accounts.py  start-web.sh
specs/: account-close-positions-requirements.md  account-close-positions-spec.md  backend-performance-requirements.md  backend-performance-spec.md  backtest-optimization-architecture.md  backtest-optimization-discovery.md  backtest-optimization-findings.md  backtest-optimization-requirements.md  backtest-optimization-spec.md  backtesting-system-architecture.md  backtesting-system-requirements.md  backtesting-system-spec.md  cool-off-time-architecture.md  cool-off-time-requirements.md  cool-off-time-spec.md  crypto-futures-analysis-spec.md  institutional-audit-fixes-requirements.md  institutional-audit-fixes-spec.md  mcp-server-architecture.md  mcp-server-requirements.md  mcp-server-spec.md  neumorphism-design-system-requirements.md  post-scan-optimization-requirements.md  post-scan-optimization-spec.md  regime-context-injection-spec.md  regime-multistrategy-architecture.md  regime-multistrategy-requirements.md  regime-multistrategy-spec.md  scheduled-scans-requirements.md  scheduled-scans-spec.md  trade-storage-lifecycle-architecture.md  trade-storage-lifecycle-requirements.md  trade-storage-lifecycle-spec.md  trading-accounts-dashboard-spec.md  web-frontend-spec.md
tests/: conftest.py  golden_diff_async.py  test_agent_schemas.py  test_agent_tools.py  test_agent_utils.py  test_alpha_vantage_common.py  test_alpha_vantage_indicator.py  test_alpha_vantage_news_stock.py  test_analysts.py  test_announcements.py  test_async_graph_integration.py  test_async_llm_foundation.py  test_async_parallel_debate.py  test_bybit_data.py  test_cache_metrics.py  test_cache_parity_eval.py  test_checkpointer.py  test_cli_main.py  test_cli_utils.py  test_coingecko_data.py  test_compliance.py  test_conditional_logic.py  test_crypto_agent_utils.py  test_crypto_analysts.py  test_crypto_technical_prompt.py  test_dataflows_config.py  test_decay_detector.py  test_default_config.py  test_event_triggers.py  test_fundamentals_analyst_prompt.py  test_graph_setup.py  test_information_barriers.py  test_interface_and_fundamentals.py  (+46 more)
(+1054 files in other folders)
