[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.4"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.81,<2",
    "backtrader>=1.9.78.123",
    "fastapi>=0.115.9",
    "langchain-anthropic>=1.4.2,<2",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "litellm>=1.83.7,<2",
    "langchain-community>=0.4.1,<0.5",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "cryptography>=44.0.0",
    "croniter>=1.4.0",
    "httpx>=0.27.0",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.63",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "mcp>=1.12.0",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
    "slow: long-running tests (perf/load gates)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ── Ruff: strict-but-pragmatic lint config for the `backend/` package ──────────
# AI-CONTEXT: Scoped to backend/ (the /production-ready target). The selected rule
# families prioritise correctness, bug-prone patterns, async safety, and modern
# Python idioms over pure cosmetics, which keeps the finding count tractable on a
# ~47.6k-LOC codebase while still catching real defects (e.g. F821 undefined names,
# B904 exception-chaining loss, B-series footguns). Cosmetic/high-churn rules
# (annotation style migrations, long-line reflow) are deferred via `ignore` and
# handled deliberately rather than via a mass auto-rewrite.
[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM", "UP", "I", "C4", "PIE", "RET", "PERF", "ASYNC"]
ignore = [
    "E501",   # line-too-long — addressed deliberately, not via mass reflow
    "UP006",  # non-pep585-annotation (Dict->dict) — large annotation churn, defer
    "UP007",  # non-pep604-annotation-union (Optional[X]->X|None style) — defer
    "UP035",  # deprecated-import (typing.Dict etc.) — paired with UP006, defer
    "UP037",  # quoted-annotation — defer with annotation cleanup
    "UP045",  # non-pep604-annotation-optional — defer
    "SIM105", # suppressible-exception (contextlib.suppress) — readability tradeoff
    "RET504", # unnecessary-assign-before-return — often aids debuggability
    "RET505", # superfluous-else-return — stylistic, keep explicit branches
]
# AI-CONTEXT: FastAPI's dependency-injection idiom legitimately calls
# Query()/Depends()/Path() in argument defaults; B008 is a false positive there.
flake8-bugbear.extend-immutable-calls = [
    "fastapi.Query", "fastapi.Depends", "fastapi.Path", "fastapi.Header",
    "fastapi.Body", "fastapi.Form", "fastapi.File", "fastapi.Cookie",
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert-heavy patterns and broader imports.
"tests/**" = ["B011"]

